--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ psycopg2-binary = "^2.9.10"
 python-dotenv = "^1.0.1"
 django = "^5.1.3"
 djangorestframework = "^3.15.2"
+django-filter = "^24.3"
 
 
 [tool.poetry.group.lint.dependencies]
