--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.1"
 django = "^5.1.3"
 djangorestframework = "^3.15.2"
 django-filter = "^24.3"
+djangorestframework-simplejwt = "^5.3.1"
 
 
 [tool.poetry.group.lint.dependencies]
