--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.7
 Django==5.1.3
 django-filter==24.3
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
 flake8==7.1.1
 isort==5.13.2
 mccabe==0.7.0
@@ -15,5 +16,6 @@ platformdirs==4.3.6
 psycopg2-binary==2.9.10
 pycodestyle==2.12.1
 pyflakes==3.2.0
+PyJWT==2.10.1
 python-dotenv==1.0.1
 sqlparse==0.5.2
