--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django = "^5.1.3"
 djangorestframework = "^3.15.2"
 django-filter = "^24.3"
 djangorestframework-simplejwt = "^5.3.1"
+requests = "^2.32.3"
 
 
 [tool.poetry.group.lint.dependencies]
