--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ black==24.10.0
 certifi==2024.12.14
 charset-normalizer==3.4.0
 click==8.1.7
+coverage==7.6.9
 decorator==5.1.1
 Django==5.1.4
 django-filter==24.3
