--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ django-filter = "^24.3"
 djangorestframework-simplejwt = "^5.3.1"
 requests = "^2.32.3"
 coverage = "^7.6.9"
+drf-yasg = "^1.21.8"
 
 
 [tool.poetry.group.lint.dependencies]
