--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,11 @@ Django==5.1.4
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.8
 executing==2.1.0
 flake8==7.1.1
 idna==3.10
+inflection==0.5.1
 ipython==8.30.0
 isort==5.13.2
 jedi==0.19.2
@@ -34,9 +36,12 @@ pyflakes==3.2.0
 Pygments==2.18.0
 PyJWT==2.10.1
 python-dotenv==1.0.1
+pytz==2024.2
+PyYAML==6.0.2
 requests==2.32.3
 sqlparse==0.5.3
 stack-data==0.6.3
 traitlets==5.14.3
+uritemplate==4.1.1
 urllib3==2.2.3
 wcwidth==0.2.13
