Начал реализовывать сервис оплаты.

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.8
 executing==2.1.0
 flake8==7.1.1
+forex-python==1.8
 idna==3.10
 inflection==0.5.1
 ipython==8.30.0
@@ -39,9 +40,12 @@ python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
+simplejson==3.19.3
 sqlparse==0.5.3
 stack-data==0.6.3
+stripe==11.4.0
 traitlets==5.14.3
+typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.2.3
 wcwidth==0.2.13
