--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ djangorestframework-simplejwt = "^5.3.1"
 requests = "^2.32.3"
 coverage = "^7.6.9"
 drf-yasg = "^1.21.8"
+stripe = "^11.4.0"
+forex-python = "^1.8"
 
 
 [tool.poetry.group.lint.dependencies]
