Настройки celery, celery_beat и redis.

--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,10 @@ DATABASE_PASSWORD=db_password
 DATABASE_HOST=db_host
 DATABASE_PORT=db_port
 STRIPE_API_KEY=strip_api_key
+
+EMAIL_HOST=host
+EMAIL_PORT=port
+EMAIL_USE_TLS=True/False
+EMAIL_USE_SSL=True/False
+EMAIL_HOST_USER=user
+EMAIL_HOST_PASSWORD=password
