--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ coverage = "^7.6.9"
 drf-yasg = "^1.21.8"
 stripe = "^11.4.0"
 forex-python = "^1.8"
+redis = "^5.2.1"
+celery = "^5.4.0"
+django-celery-beat = "^2.7.0"
 
 
 [tool.poetry.group.lint.dependencies]
