--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,6 @@ EMAIL_USE_TLS=True/False
 EMAIL_USE_SSL=True/False
 EMAIL_HOST_USER=user
 EMAIL_HOST_PASSWORD=password
+
+CELERY_BROKER_URL=celery_broker_url
+CELERY_RESULT_BACKEND=celery_result_backend
