--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,6 @@
-version: '3.9'
+version: '3'
 
 services:
-
-  redis:
-    image: redis:latest
-    command: redis-server
-    volumes:
-      - redis_data:/data
-    restart: on-failure
-    expose:
-      - "6379"
 
   db:
     image: postgres:16
@@ -19,13 +10,16 @@ services:
       - ./.env
     expose:
       - "5432"
-
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   web:
     build: .
     command: bash -c "
       python manage.py migrate
-      && python manage.py create_super_user
       && python manage.py runserver 0.0.0.0:8000
       "
     volumes:
@@ -37,11 +31,10 @@ services:
     env_file:
       - ./.env
     environment:
-      - DATABASE_HOST=db
+      - POSTGRES_HOST=db
 
 
 
 volumes:
-  redis_data:
   postgres_data:
   static_volume:
